name:                 onyxite-customs-tool
version:              0.4
homepage:             https://github.com/mtolly/onyxite-customs
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Distribution
build-type:           Simple
cabal-version:        >= 1.10
license:              GPL-3
license-file:         LICENSE.txt

extra-source-files:
  vendors/Pentatonic.ttf
  vendors/KV.bin
  vendors/rb3.png
  vendors/empty.milo_xbox
  vendors/empty-rb2.milo_xbox
  vendors/empty-rb2_weights.bin
  ../player/www/index.html
  ../player/www/app.min.js
  ../player/www/images/*.png
  ../player/www/lib/howler/dist/howler.min.js
  cbits/*.h

flag MoggDecrypt
  default:             False
  description:         Enable external MOGG decryptor

executable onyx
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:
    Build
    CommandLine
    YAMLTree
    Audio
    Scripts
    OneFoot
    Magma
    X360
    Image
    C3
    Reductions
    Reaper.Scan
    Reaper.Parse
    Reaper.Base
    Reaper.Build
    STFS.Extract
    MoggDecrypt
    SndfileExtra
    ProKeysRanges
    PrettyDTA
    Import
    Difficulty
    FretsOnFire
    RockBand2
    RockBand3
    GuitarHeroII
    DryVox
    RenderAudio
    RockBand.ProGuitar.Play
    GUI
    OSFiles
    -- midiscript
    Sound.MIDI.Script.Base
    Sound.MIDI.Script.Scan
    Sound.MIDI.Script.Parse
    Sound.MIDI.Script.Read
    -- resources
    Resources
    -- build-types
    Config
    Genre
    JSONData
    -- display
    OnyxiteDisplay.Process
    -- parse
    RockBand.Common
    RockBand.Parse
    RockBand.Sections
    RockBand.Beat
    RockBand.Drums
    RockBand.Events
    RockBand.File
    RockBand.FiveButton
    RockBand.Vocals
    RockBand.ProKeys
    RockBand.ProGuitar
    RockBand.Venue
    RockBand.PhaseShiftKeys
    RockBand.PhaseShiftMessage
    MelodysEscape
    -- stack-trace
    Control.Monad.Trans.StackTrace
    -- dta
    Data.DTA
    Data.DTA.Crypt
    Data.DTA.Serialize
    Data.DTA.Serialize.Magma
    Data.DTA.Serialize.RB3
    Data.DTA.Base
    Data.DTA.Lex
    Data.DTA.Parse
    Data.DTA.PrettyPrint
  build-depends:
    base    >= 4.8    && < 4.10
    , shake >= 0.15 && < 0.16
    , hashable
    , directory
    , temporary
    , aeson, text, unordered-containers, filepath, yaml
    , file-embed
    , event-list, non-negative, midi
    , containers
    , bytestring
    , process >= 1.2.0.0 && < 1.5
    , resourcet
    , hsndfile
    , JuicyPixels >= 3.2.3.1
    , conduit
    , vector
    , transformers >= 0.5
    , mtl
    , extra
    , pureMD5
    , binary
    , array
    , base64-bytestring
    , pretty
    , monad-loops
    , time
    , ini
    , executable-path
    , split
    , data-default-class
    , utility-ht   >= 0.0.1 && < 0.1
    , scientific
    , template-haskell
    , MonadRandom
    , data-binary-ieee754 >= 0.4.4    && < 0.5
    , sdl2
    , sdl2-ttf
    , zip-archive
    , silently
    , codec
    -- my libraries:
    , XboxInternals
    , jammittools >= 0.5.0.3 && < 0.6
    , midi-util >= 0.2 && < 0.3
    , conduit-audio >= 0.2 && < 0.3
    , conduit-audio-sndfile
    , conduit-audio-samplerate
    , conduit-audio-lame
    , rubberband >= 0.1.0.2 && < 0.2
    , tinyfiledialogs
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded -O
  build-tools: c2hs >= 0.27.1, alex, happy
  if flag(MoggDecrypt)
    cpp-options: -DMOGGDECRYPT
    build-depends: mogg2ogg
  include-dirs:
    cbits/
  c-sources:
    cbits/stb_image_resize.c
    cbits/stb_dxt.c
    cbits/encode_vag.c
    cbits/ArkTool_v6.1/xyssl/aes.c
    cbits/ArkTool_v6.1/ArkFile.cpp
    cbits/ArkTool_v6.1/ArkHdrPair.cpp
    cbits/ArkTool_v6.1/DtbCrypt.cpp
    cbits/ArkTool_v6.1/FileCollection.cpp
    cbits/ArkTool_v6.1/FileEntry.cpp
    cbits/ArkTool_v6.1/HdrFile.cpp
    cbits/ArkTool_v6.1/PssVgsAccess.cpp
    cbits/ArkTool_v6.1/SongCrypt.cpp
    cbits/ArkTool_v6.1/Onyx.cpp
  extra-libraries: stdc++
  if os(mingw32)
    extra-libraries: shell32
    cpp-options: -DWINDOWS
    build-depends: Win32
    ld-options: -mwindows
  else
    build-depends: mountpoints
  if os(darwin)
    cpp-options: -DMACOSX
    c-sources: cbits/macfiles.m
    frameworks: AppKit
