name:                 onyxite-customs-preview
version:              0.1
license:              GPL-3
license-file:         LICENSE
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Game
build-type:           Simple
cabal-version:        >= 1.10

executable onyxpreview
  main-is:              Main.hs
  other-modules:
    Audio
    Draw
    Midi
  build-depends:
    base >= 4.7 && < 4.8
    , non-negative
    , event-list
    , midi
    , midi-util >= 0.1.1.1 && < 0.2
    , ghcjs-base
    , containers
    , time
    , stm
    , onyxite-customs-parse
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -O2
  js-sources:
    js/loadmidi.js
    js/parseget.js
