name:                 onyxite-preview
version:              0.1
license:              GPL-3
license-file:         LICENSE
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Game
build-type:           Simple
cabal-version:        >= 1.10

executable onyxite-preview
  main-is:              Main.hs
  build-depends:
    base >= 4.7 && < 4.8
    , non-negative
    , event-list
    , midi
    , midi-util == 0.1
    , ghcjs-base
  hs-source-dirs:       src
  default-language:     Haskell2010
