Name:               onyxite-customs
Version:            0.1
Synopsis:           Helper application for a Rock Band custom songs project
License:            GPL
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Sound

Executable onyxite-customs
  Main-Is:          Main.hs
  Hs-Source-Dirs:   src
  Build-Depends:    base >= 4 && < 5
                    , non-negative == 0.1.*
                    , midi         == 0.2.*
                    , event-list   == 0.1.*
                    , containers   == 0.5.*
                    , process      == 1.2.*
                    , temporary    == 1.2.*
                    , filepath     == 1.3.*
  Ghc-Options:      -Wall

Source-Repository head
  Type:             git
  location:         git://github.com/mtolly/onyxite-customs.git
