name:                 XboxInternals
version:              0.1
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:
    XboxInternals
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall
  build-tools: c2hs >= 0.27.1
  include-dirs:
    cbits/
  c-sources:
    -- cbits/Account/Account.cpp
    -- cbits/Account/AccountHelpers.cpp
    cbits/AvatarAsset/AssetHelpers.cpp
    -- cbits/AvatarAsset/AvatarAsset.cpp
    -- cbits/AvatarAsset/Ytgr.cpp
    cbits/Cryptography/XeCrypt.cpp
    -- cbits/Cryptography/XeKeys.cpp
    -- cbits/Disc/Gdfx.cpp
    -- cbits/Disc/Svod.cpp
    -- cbits/Fatx/FatxDrive.cpp
    -- cbits/Fatx/FatxDriveDetection.cpp
    -- cbits/Gpd/AvatarAwardGpd.cpp
    -- cbits/Gpd/DashboardGpd.cpp
    -- cbits/Gpd/GameGpd.cpp
    -- cbits/Gpd/GpdBase.cpp
    -- cbits/Gpd/Xdbf.cpp
    cbits/Gpd/XdbfHelpers.cpp
    cbits/IO/BaseIO.cpp
    -- cbits/IO/DeviceIO.cpp
    -- cbits/IO/FatxIO.cpp
    cbits/IO/FileIO.cpp
    cbits/IO/MemoryIO.cpp
    -- cbits/IO/MultiFileIO.cpp
    -- cbits/IO/SvodIO.cpp
    -- cbits/IO/SvodMultiFileIO.cpp
    cbits/Stfs/StfsDefinitions.cpp
    cbits/Stfs/StfsPackage.cpp
    cbits/Stfs/XContentHeader.cpp
  pkgconfig-depends: botan-2
  extra-libraries: stdc++
  cc-options: -std=c++11
