name:                 onyxite-customs-display
version:              0.1.0.0
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:       src
  default-language:     Haskell2010
  exposed-modules:
    OnyxiteDisplay.Process
  build-depends:
    base >= 4.7 && < 5
    , onyxite-customs-parse
    , event-list
    , midi-util
    , containers
    , aeson
    , text
    , unordered-containers
  ghc-options: -Wall
