name:               onyxite-customs-dta
version:            0.1.0.0
synopsis:           Harmonix DTA/DTB metadata library
description:

  Read\/write\/encryption functions for the DTA\/DTB metadata format.

license:            LGPL
author:             Michael Tolly
maintainer:         miketolly@gmail.com
build-type:         Simple
cabal-version:      >= 1.10
category:           Data

library
  build-depends:
    base                  >= 4.6      && < 4.9
    , bytestring          >= 0.10.0.2 && < 0.11
    , transformers        >= 0.3.0.0  && < 0.5
    , data-binary-ieee754 >= 0.4.4    && < 0.5
    , binary              >= 0.5.1.1  && < 0.8
    , array               >= 0.4.0.1  && < 0.6
    , pretty              >= 1.1.1.0  && < 1.2
    , containers          >= 0.5.0.0  && < 0.6
  exposed-modules:
    Data.DTA
    Data.DTA.Crypt
    Data.DTA.Serialize
    Data.DTA.Serialize.Magma
    Data.DTA.Serialize.RB3
  other-modules:
    Data.DTA.Base
    Data.DTA.Lex
    Data.DTA.Parse
    Data.DTA.PrettyPrint
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   Haskell2010
  build-tools:        alex, happy
