name:                 onyxite-customs-editor
version:              0.1.0.0
build-type:           Simple
cabal-version:        >=1.10

executable onyxeditor
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:
    SDLBindings
    Images
  default-language:     Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , sdl2 >= 2.1.0 && < 2.2
    , file-embed
    , bytestring
    , onyxite-customs-parse
    , onyxite-customs-stack-trace
    , linear
    , midi
    , filepath
    , event-list
    , midi-util
    , containers
    , non-negative
  pkgconfig-depends: SDL2_image, SDL2_mixer
  build-tools: c2hs
  ghc-options: -Wall
