name:                 onyxite-customs-parse
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Game
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:       src
  exposed-modules:
    RockBand.Common
    RockBand.Parse
    RockBand.Beat
    RockBand.Countin
    RockBand.Drums
    RockBand.Events
    RockBand.File
    RockBand.FiveButton
    RockBand.Vocals
    RockBand.ProKeys
    RockBand.ProGuitar
    RockBand.Venue
    RockBand.PhaseShiftKeys
  build-depends:
    base >= 4.6 && < 4.9
    , event-list, non-negative, midi
    , transformers >= 0.4
    , template-haskell
    -- my libraries:
    , midi-util >= 0.2 && < 0.3
    , onyxite-customs-stack-trace
  default-language:     Haskell2010
  ghc-options:          -Wall
