name:                 onyxite-customs-preview
version:              0.1
license:              GPL-3
license-file:         LICENSE
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Game
build-type:           Simple
cabal-version:        >= 1.10

flag SDLDisplay
  description: use SDL (ghc) instead of Canvas (ghcjs)
  default: False

executable onyxpreview
  main-is:              Main.hs
  other-modules:
    Draw
    Midi
  if flag(SDLDisplay)
    other-modules:
      SDLUtil
      SDLMixer
  else
    other-modules:
      Audio
      Canvas
      Jasmid

  build-depends:
    base >= 4.7 && < 5
    , non-negative
    , event-list
    , midi
    , midi-util >= 0.1.1.1 && < 0.2
    , containers
    , time
    , stm
    , transformers
    , onyxite-customs-parse
    , onyxite-customs-stack-trace
  if flag(SDLDisplay)
    build-depends:
      sdl2 >= 1.3.1 && < 2
      , sdl2-image
      , filepath
      , temporary
      , bytestring
      , file-embed
  else
    build-depends:
      ghcjs-base

  hs-source-dirs:       src
  if flag(SDLDisplay)
    hs-source-dirs:     src-sdl
  else
    hs-source-dirs:     src-js

  default-language:     Haskell2010
  ghc-options:          -Wall -O2
  cpp-options:          -DGHCJS_BROWSER
  if !flag(SDLDisplay)
    js-sources:
      js/loadmidi.js
      js/parseget.js

  if flag(SDLDisplay)
    pkgconfig-depends:
      SDL2_mixer
    build-tools: c2hs
