name:                 onyxite-customs-web-display
version:              0.1.0.0
build-type:           Simple
cabal-version:        >=1.10

executable onyxpreview
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:
    Audio
    Images
    MIDI
  ghc-options:          -Wall
  build-depends:
    base
    , onyxite-customs-display
    , onyxite-customs-parse
    , onyxite-customs-stack-trace
    , transformers
    , ghcjs-base
    , linear
    , midi-util
    , midi
    , bytestring
    , event-list
    , containers
    , stm
  default-language:     Haskell2010
  cpp-options:          -DGHCJS_BROWSER

