name:                 onyxite-customs-web-display
version:              0.1.0.0
build-type:           Simple
cabal-version:        >=1.10

executable onyxpreview
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:
    Audio
    Images
  ghc-options:          -Wall
  build-depends:
    base
    , onyxite-customs-display
    , onyxite-customs-parse
    , onyxite-customs-stack-trace
    , transformers
    , ghcjs-base
    , linear
    , bytestring
    , event-list
    , containers
    , stm
    , aeson
    , text
  default-language:     Haskell2010
  cpp-options:          -DGHCJS_BROWSER

