cabal-version:  1.12
name:           ww2ogg
version:        0.1
build-type:     Simple

library
  exposed-modules:
    Sound.WW2Ogg
  hs-source-dirs:
    src
  ghc-options: -Wall
  include-dirs:
    cbits
  c-sources:
    cbits/codebook.cpp
    cbits/crc.c
    cbits/haskell.cpp
    cbits/wwriff.cpp
    cbits/revorb.c
  build-depends: base, bytestring
  default-language: Haskell2010
  extra-libraries: stdc++, ogg, vorbis
