cabal-version:  2.2
name:           ww2ogg
version:        0.1
build-type:     Simple

library
  exposed-modules:
    Sound.WW2Ogg
  hs-source-dirs:
    src
  ghc-options: -Wall
  include-dirs:
    cbits
  c-sources:
    cbits/crc.c
    cbits/revorb.c
  cxx-sources:
    cbits/codebook.cpp
    cbits/haskell.cpp
    cbits/wwriff.cpp
  build-depends: base, bytestring
  default-language: Haskell2010
  extra-libraries: stdc++
  pkgconfig-depends: ogg, vorbis
  cxx-options: -std=c++11
